--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <br>
                     <h2>Planner - Project Accelerator</h2>
                     <input placeholder="Radius" id="inputR">
-                    <button id="btnGen">Calculate</button><br>
+                    <button id="btnGen">Calculate Accelerator</button><br>
                     <input placeholder="kAcceleration" id="inputKA" value="0.0025"><br>
                     <input placeholder="kOverall" id="inputKO" value="6"><br>
                     <input placeholder="kFail" id="inputKF" value="0.004"><br>
                     <input placeholder="kStablizer" id="inputKS" value="0.4"><br>
                     <input placeholder="kDrag" id="inputKD" value="0.01">
-                    <button id="btnAna">Analyze</button><br>
+                    <button id="btnAna">Analyze Config</button><br>
                     <p id="pOut"></p>
                 </div>
             </td>
