--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <br>
                     <h2>Planner - Project Accelerator</h2>
                     <input placeholder="Radius" id="inputR">
-                    <button id="btnGen">Calculate Accelerator</button><br>
+                    <button id="btnGen">Calculate Accelerator</button>
+                    <button id="btnplusGen">+</button>
+                    <button id="btnminusGen">-</button><br>
                     <input placeholder="kAcceleration" id="inputKA" value="0.0025"><br>
                     <input placeholder="kOverall" id="inputKO" value="6"><br>
                     <input placeholder="kFail" id="inputKF" value="0.004"><br>
